# ralph-tui

./: CHANGELOG.md  CLAUDE.md  Cargo.toml  Justfile  README.md
resources/agents/: ralph-cli.md  ralph-coder.md  ralph.md  spec-synth.md
resources/skills/absolute/: SKILL.md
resources/skills/go/: SKILL.md
resources/skills/grill-me/: SKILL.md
resources/skills/prd/: SKILL.md
resources/skills/prd-synth/: SKILL.md
resources/skills/spec/: SKILL.md
resources/skills/spec-clarify/: SKILL.md
resources/skills/spec-finalize/: SKILL.md
scripts/ralph/: .last-branch  ralph-status.sh  ralph.sh
scripts/ralph/archive/2026-03-01-ralph-cli-agents-and-skills/: prd.json
scripts/ralph/archive/2026-03-01-ralph-cli-core/: prd.json
scripts/ralph/archive/2026-03-01-rename-story-to-task-plan-to-workflow/: prd.json
src/: app.rs  main.rs  ui.rs
src/app/: mod.rs
src/ralph/: config.rs  mod.rs  plan.rs  runner.rs  store.rs  watcher.rs  workflow.rs
src/ui/: mod.rs
tasks/: prd-agents-and-skills.md  prd-fix-auto-run-mode.md  prd-fix-token-usage-display.md  prd-getting-started-docs.md  prd-ralph-cli-core.md  prd-ralph-cli-file-watcher.md  prd-ralph-cli-prd-editor.md  prd-ralph-cli-prd-synthesis.md  prd-ralph-cli-token-tracking.md  prd-rename-cli-to-tui.md  prd-rename-story-to-task-plan-to-workflow.md  prd-runner-keyboard-ux.md  prd-runner-ux-improvements.md  prd-tabbed-runner-ui.md  prd-token-usage-tracking.md
