[package]
name = "ralph-tui"
version = "0.1.0"
edition = "2024"
description = "A terminal user interface (TUI) for running and monitoring Ralph AI workflows"

[[bin]]
name = "ralph-tui"
path = "src/main.rs"

[dependencies]
ratatui = "0.30"
crossterm = "0.28"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
tokio = { version = "1", features = ["full"] }
clap = { version = "4", features = ["derive"] }
portable-pty = "0.9"
tui-term = "0.3.1"
vt100 = "0.16"
notify = "6"
notify-debouncer-full = "0.3"
